<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_secondary_variant"
        android:orientation="vertical">
        <!-- Email Label -->



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@android:color/background_light"
            android:minHeight="?attr/actionBarSize"
            app:title="LogIn"
            app:titleTextColor="@color/design_default_color_secondary_variant" />

        <EditText
            android:id="@+id/logInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Name"
            android:inputType="textEmailAddress"
            android:textColorHint="#009688"
            android:textSize="20dp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/logInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColorHint="#009688"
            android:textSize="20dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/bentham"
            android:text="Log in"
            android:textColor="#009688" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/create_account"
            android:textSize="16dip" />


    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        android:clipToPadding="false"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/navigation" />
</androidx.drawerlayout.widget.DrawerLayout>
