...
            android:text="Click here to start shopping"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="italic" />

        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
...
